# connect4-engine

./: .gitignore  Cargo.toml  README.md  build.rs  magic.py  magic.rs
examples/: cli_eval.rs  cli_game.rs  problem.rs
examples/cli-eval/: main.rs
examples/cli-evaluation/: main.rs
examples/cli-game/: main.rs
examples/connect4-cli/: main.rs
src/: bit_board.rs  error.rs  game_handler.rs  lib.rs  magic.rs  main.rs  move_rep.rs  move_sorter.rs  opening_book.rs  position.rs  prelude.rs  solver.rs  transposition_table.rs  util.rs
src/board/: bit_board.rs  board.rs  disk.rs  mod.rs
src/board/magic/: impls.rs  traits.rs
src/commands/: eval.rs  mod.rs  play.rs
src/magic/: impls.rs  traits.rs
src/solver/: mod.rs  move_sorter.rs  opening_book.rs  solver.rs  transposition_table.rs
src/util/: mod.rs  move_rep.rs  util.rs
tests/: pons.rs
tests/data/: early_easy.test  early_hard.test  early_medium.test  end_easy.test  middle_easy.test  middle_medium.test
