[package]
name = "connect4_engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
clap = { version = "4.0", features = ["derive"] }
thousands = "0.2.0"
num-traits = "0.2.19"
